--- a/QL_CDC-master/QL_CDC/Views/SanPham/Index.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/Index.cshtml
@@ -38,7 +38,7 @@
         <table style="width:90%">
             <tr>
                 <th style="width:15%">
-                    <div class="d-flex align-items-start align-items-sm-center gap-4">
+                    <div class="d-flex align-items-start align-items-sm-center gap-4" >
                         <img src="~/template/img/binh nuoc.jpg" style="border-radius:30%"
                              height="80"
                              width="80"
@@ -113,7 +113,7 @@
     string giagoc = string.Format("{0:#,##0.########}", item.giagocsp);
     var sosao = Math.Round(item.danhgiasp, 0, MidpointRounding.AwayFromZero);
 <div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
-    <div class="card product-item mb-4 " style="width: 105%">
+    <div class="card product-item mb-4 sanpham" style="width: 105%">
         <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
             <div style="width: 100%; display: flex;">
                 <div class="tagthoigian">@item.thoigiansp tháng</div>
