--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangNhap.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DangNhap.cshtml
@@ -168,7 +168,7 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <button type="submit" class="btn btn-primary" style="margin-left: 10vw;margin-top: 20px">Đăng nhập</button>
+                                <button type="submit" class="btn btn-primary" style="margin-left: 8.5vw;margin-top: 20px">Đăng nhập</button>
                             </div>
                         </form>
 
@@ -182,7 +182,7 @@
                         </p>
                         <p style="margin-left:135px">
                             <span></span>
-                            <a href="@Url.Action("DangKy","TaiKhoan")">
+                            <a href="">
                                 <span>Quên mật khẩu</span>
                             </a>
                         </p>
