--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -63,11 +63,12 @@
     <div class="container-fluid">
         <div class="row border-top px-xl-5" style="margin-left: -70px">
             <div class="col-lg-3 d-none d-lg-block">
-                <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-                    <h5 class="m-3" style="color: white"><b>Danh mục sản phẩm</b></h5>
-                </a>
+                
 
-                <ul class="accordion-menu" style="margin-top:0px">
+                <ul class="accordion-menu" style="margin-top:0px; position:fixed">
+                    <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 60px; margin-top: -1px; padding: 0 30px">
+                        <h5 class="m-3" style="color: white"><b>Danh mục sản phẩm</b></h5>
+                    </a>
                     <li>
                         <div class="dropdownlink">
                             <h5><i class="fa fa-male" aria-hidden="true"></i> Đồ cá nhân <i class="fa fa-chevron-down" aria-hidden="true"></i></h5>
@@ -124,7 +125,7 @@
             </div>
 
 
-            <div class="col-lg-9" style="padding:3px">
+            <div class="col-lg-9" style="padding:3px; margin-top:-5px">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="@Url.Action("Index","SanPham")" class="text-decoration-none d-block d-lg-none">
                         <h2 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">Chợ rao vặt Sinh viên</span></h2>
@@ -182,7 +183,7 @@
 
 <div class="container-fluid">
     <div class="row justify-content-center row-1">
-        <div style="width:900px">
+        <div style="width:900px; margin-left:155px">
             <h4><b>WEBSITE RAO VẶT TRỰC TUYẾN DÀNH CHO SINH VIÊN</b></h4>
             <h5>
                 Trong việc mua bán, đối với người kinh doanh có nguồn vốn ban đầu thấp, làm thế nào để vừa có được không gian bán hàng tốt vừa tiếp cận khách hàng dễ dàng mà không tốn quá nhiều chi phí cho việc chạy quảng cáo, thuê nhân viên, mặt bằng, trang trí cửa hàng, … còn đối với người tiêu dùng thì làm thế nào để dễ dàng tìm ra được một cửa hàng bán sản phẩm chất lượng, uy tín, tham khảo sản phẩm vào những thời gian rảnh rỗi mà không cần tốn quá nhiều công sức và thời gian di chuyển, chủ động trong việc thanh toán và vận chuyển.
