--- a/QL_CDC-master/QL_CDC/Views/Admin/DuyetBaiChuaDuyet.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/DuyetBaiChuaDuyet.cshtml
@@ -131,12 +131,12 @@
             <input type="text" id="nameLarge" class="form-control" value="@item.ttsv" />
         </div>*@
             </div>
-            <div class="modal-footer">
+            @*<div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                     Close
                 </button>
                 <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+            </div>*@
         </div>
     </div>
 </div>
@@ -205,10 +205,7 @@
                 //}
            
             }                      
-        })
-        function getHinhAnh() {
-            
-        };
+        })        
     }
 
 
