--- a/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonMua.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonMua.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center mb-4">
-    <h2 class="section-title px-5"><span class="px-2">Chi tiết hóa đơn</span></h2>
+    <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Chi tiết hóa đơn</span></h2>
 </div>
 <!-- Checkout Start -->
 <div class="container-fluid pt-5">
