--- a/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
@@ -4,10 +4,10 @@
     Layout = "_ThirdLayout";
 }
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<div class="text-center mb-4">
-    <h2 class="section-title px-5"><span class="px-2">Hóa đơn đã đặt</span></h2>
+<div class="text-center mb-4" style="margin-top:-20px; ">
+    <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Hóa đơn đã đặt</span></h2>
 </div>
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5" style="height:1000px">
     <div class="row px-xl-5">
         <div class="hoadontieude bg-secondary text-dark">
             <div style="width: 30%">
