--- a/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/AdminLayout.cshtml
@@ -131,7 +131,7 @@
                             <li class="menu-item">
                                 <a href="@Url.Action("ChartTheoLoai","Admin")" class="menu-link">
                                     <div data-i18n="Account">Thống kê bài đăng</div>
-                                </a>                   
+                                </a>
                         </ul>
                     </li>
 
@@ -160,23 +160,12 @@
                         </ul>
                     </li>
                     <li class="menu-item">
-                        <a href="javascript:void(0);" class="menu-link menu-toggle">
+                        <a href="@Url.Action("QLDM","Admin")" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-category"></i>
                             <div data-i18n="Account Settings">Quản lý danh mục</div>
                         </a>
-                        <ul class="menu-sub">
-                            <li class="menu-item">
-                                <a href="pages-account-settings-account.html" class="menu-link">
-                                    <div data-i18n="Account">Loại Mặt hàng</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="pages-account-settings-notifications.html" class="menu-link">
-                                    <div data-i18n="Notifications">Loại sản phẩm</div>
-                                </a>
-                            </li>
-                        </ul>
                     </li>
+                    
                 </ul>
 
 
