--- a/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/GioHang/GioHang.cshtml
@@ -6,8 +6,8 @@
 
 
 <!-- Cart Start -->
-<div class="text-center mb-4" >
-    <h2 class="section-title px-5" style="margin-top:-10px"><span class="px-2">Giỏ hàng</span></h2>
+<div class="text-center mb-4" style="margin-top:-20px;">
+    <h2 class="section-title px-5" ><span class="px-2" style="background-color:gainsboro" >Giỏ hàng của ban</span></h2>
 </div>
 @if (Model.SanPham.Count() != 0)
 {
@@ -93,7 +93,7 @@
 else
 {
 <div class="text-center">
-    <h2 class="section-title px-5"><span class="px-2" style="color: #0f893b">Giỏ hàng của bạn hiện tại đang trống</span></h2>
+    <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Giỏ hàng của bạn hiện tại đang trống</span></h2>
 </div>
 }
 
