--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container-fluid pt-5" style="margin-top:-50px">
     <div class="text-center mb-4">
-        <h2 class="section-title px-5"><span class="px-2">Thông tin cá nhân</span></h2>
+        <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Thông tin cá nhân</span></h2>
     </div>
     <div class="row px-xl-5 pb-3 ">
         <div class="col-lg-12">
